# test-cmake-opencv-demo

./: .gitignore  CMakeLists.txt  main.cpp  pixi.toml
.github/workflows/: test-demo.yml
